src/objects/QBPayment_Receipt_Report__c.object
<CustomObject>
    <description>Cash Receipts Data from Quickbooks</description>
    <fields>
        <fullName>AR_Account__c</fullName>
        <label>AR Account</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_to_Invoice_Amount__c</fullName>
        <label>Applied to Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_to_Invoice_Disc_Account__c</fullName>
        <label>Applied to Invoice Disc Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_to_Invoice_Ref__c</fullName>
        <label>Applied to Invoice Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Charges_Amount__c</fullName>
        <label>Bank Charges Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Charges_GLA__c</fullName>
        <label>Bank Charges GLA</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_To_Account__c</fullName>
        <label>Deposit To Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Bank_Account__c</fullName>
        <formula>CASE(left(Deposit_To_Account__c,5),
 &quot;10400&quot;, &quot;Operating Account&quot;,
&quot;10010&quot;,&quot;BOA Checking&quot;,
&quot;10100&quot;, &quot;Bridge Bank - Main&quot;,
&quot;10101&quot;,&quot;Bridge Bank - Main&quot;,
&quot;12100&quot;,&quot;BGE Leases&quot;,
&quot;10040&quot;,&quot;BB&amp;T - Main&quot;,
&quot;10070&quot;,&quot;BB&amp;T - SRECs&quot;,
&quot;10095&quot;,&quot;BB&amp;T - Leasing Account&quot;,
&quot;Operating Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Bank Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Customer__c</fullName>
        <formula>IF ( Left (Customer__c,8)=&quot;BGE Home&quot;, &quot;BGE Home&quot;, Customer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Payment_Type__c</fullName>
        <formula>CASE(Payment_Method__c , &quot;Cash&quot;,&quot;Cash&quot;,
 &quot;Check&quot;, &quot;Check&quot;,&quot;Check&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnId__c</fullName>
        <label>TxnId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>QB Payment Receipt Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applied_to_Invoice_Amount__c</columns>
        <columns>Applied_to_Invoice_Disc_Account__c</columns>
        <columns>Applied_to_Invoice_Ref__c</columns>
        <columns>AR_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Date__c</columns>
        <columns>Deposit_To_Account__c</columns>
        <columns>Memo__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TxnId__c</columns>
        <columns>IR2_Bank_Account__c</columns>
        <columns>IR2_Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IR2_Customer__c</columns>
        <columns>IR2_Payment_Type__c</columns>
        <columns>IR2_Bank_Account__c</columns>
        <columns>Applied_to_Invoice_Ref__c</columns>
        <columns>Date__c</columns>
        <columns>Deposit_To_Account__c</columns>
        <columns>Memo__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Processed__c</columns>
        <columns>Customer__c</columns>
        <columns>Applied_to_Invoice_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoicepymtfile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Payment Receipt Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>